# simple_token_burner_app

./: .env.example  .gitignore  README.md  llm_router.code-workspace  main.py  pyproject.toml  requirements.txt  run.sh
simple_agent_app/: __init__.py  agent.py  llm_client.py  logger.py
simple_token_burner_app/: __init__.py  agent.py  env.py  llm_client.py  logger.py  prompt_envelope.py  prompts.py
tests/: test_burner_smoke.py  test_prompt_envelope.py
