[project]
name = "simple-token-burner-app"
version = "0.1.0"
description = "A standalone Python application that repeatedly runs prompts against an LLM and logs comprehensive metrics."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Andy Stevko", email = "andy.stevko@gmail.com" }
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.91.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.3.0"]
# Install smart-llm telemetry (LurkLogger) when available locally or from PyPI.
# The app runs fine without it; LurkLogger capture is silently skipped if absent.
telemetry = ["smart-llm"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv.sources]
smart-llm = { path = "../smart_llm", editable = true }
